# oishii-x-movie-stock

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  update-data.yml
data/: aimai.json  groups.json  mizutama.json  oishii_inc.json  shokuzai.json  videos.json
docs/superpowers/plans/: 2026-05-01-aimai-movie-stock.md  2026-05-01-responsive-ui.md  2026-05-03-embed-responsive-width.md  2026-05-03-google-analytics.md  2026-05-06-multi-group-tabs.md  2026-05-06-ogp-meta-tags.md  2026-05-29-oishii-inc-group-tab.md
docs/superpowers/specs/: 2026-05-01-aimai-movie-stock-design.md  2026-05-01-responsive-ui-design.md  2026-05-03-embed-responsive-width-design.md  2026-05-03-google-analytics-design.md  2026-05-06-multi-group-tabs-design.md  2026-05-06-ogp-meta-tags-design.md  2026-05-29-oishii-inc-group-tab-design.md
schema/: groups.schema.json  videos.schema.json
scraper/: README.md  pyproject.toml
scraper/src/scraper/: __init__.py  cli.py  groups.py  io_.py  merge.py  models.py
scraper/src/scraper/sources/: __init__.py  base.py  x_api_source.py
scraper/tests/: conftest.py  test_cli.py  test_groups.py  test_io.py  test_merge.py  test_models.py  test_sources_fake.py
scraper/tests/fixtures/: empty_videos.json  sample_videos.json
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: analytics.ts  data.ts  embed.ts  groups.ts  main.ts  render.ts  search.ts  styles.css  theme.ts  types.ts
web/tests/: data.test.ts  groups.test.ts  index-html.test.ts  render.test.ts  search.test.ts
