[project]
name = "scraper"
version = "0.1.0"
description = "Scrape @official_aimai videos and emit data/videos.json"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pydantic>=2.7,<3",
  "jsonschema>=4.22,<5",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.4,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
